@@ -1,3 +1,12 @@
+2006-10-01  Matthias Wimmer  <m@tthias.eu>
+
+    * jabberd/lib/hmac.c: support for calculating HMAC-SHA1
+    * jabberd/lib/jabberdlib.h: same
+    * dialback/dialback.c: RFC 3920 compliant dialback key generation
+    * dialback/dialback_in.c: same
+    * dialback/dialback_out.c: same
+    * dialback/dialback.h: same
+
 2006-09-18  Matthias Wimmer  <m@tthias.eu>
 
     * dialback/dialback.h: expiring unauthorized idle connections as well
